@@ -16,3 +16,6 @@
 spring.profiles.active=chaos-monkey
 chaos.monkey.assaults.latency-range-start=10
 chaos.monkey.assaults.latency-range-end=50
+
+# set management port to 0 to use default port
+management.server.port=0
